--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/cursos.css">
-  <link rel="stylesheet" href="css/skills.css">
-  <link rel="stylesheet" href="css/contatos.css">
-  <link rel="stylesheet" href="css/projetos.css">
-  <link rel="stylesheet" href="css/mobile.css">
-  <link rel="stylesheet" href="css/tablet.css">
+  <link rel="shortcut icon" href="img/pc-favicon.png" type="image/x-icon">
+  
 
   
   <title>Portifolio</title>
@@ -66,7 +62,7 @@
     <h3>Senac</h3>
     <p><br> Assistente de Desenvolvimento de Aplicativos Computacionais
         <br>
-      08/2022 - 03/2023 <br><br>  
+      08/2022 - 05/2023 <br><br>  
     JavaScript  Interatividade para WEB
         <br>
       36 horas</p>
@@ -108,6 +104,19 @@
   
     <a class="pj " href="https://github.com/Giovanna-GS/Snake-Game" target="_blank">
       <img src="img/cobra-pj.png" alt="projeto jogo da cobra"></a>
+
+    <a class="pj" href="https://github.com/Giovanna-GS/ListBox" target="_blank">
+        <img src="img/c-pj.png" alt="Projeto C#">
+    </a>
+
+    <a class="pj" href="https://github.com/Giovanna-GS/SelfCare" target="_blank">
+      <img src="img/selfcare.png" alt="Projeto Selfcare">
+    </a>
+
+    <a class="pj" href="https://github.com/Giovanna-GS/Barbearia-Alura" target="_blank">
+      <img src="img/barbearia-alura.png" alt="Site Barbearia Alura">
+    </a>
+    
   
   </div>  
 </div>
