--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/mobile.css">
   <link rel="shortcut icon" href="img/pc-favicon.png" type="image/x-icon">
+  <script src=""></script>
   
 
   
@@ -149,6 +151,7 @@
   </ul>
   
 </footer>
+<script src="mobile.js"></script>
 </body>
 </html>
 
